--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -278,6 +278,143 @@
     "CANCEL": "Cancel",
     "INNUMBER": "Enter a number"
 
+  },
+
+  "COMPETITIONS": {
+    "TITLE": "Competiciones",
+    "SUBTITLE": "Tus competiciones:",
+    "AVAILABLE": "Competiciones disponibles",
+    "NONE_STUDENT": "No participas en ninguna competición.",
+    "NONE_TEACHER": "No tiene ninguna competición creada.",
+    "CREATE_NEW_COMPETITION": "Crear nueva competición",
+    "NAME": "Nombre de la competición",
+    "TYPE": "Tipo de competición",
+    "TYPE2": "Tipo",
+    "MODE": "Modo",
+    "NUMBER_JOURNEYS": "Número de jornadas",
+    "LEAGUE": "Liga",
+    "TENNIS": "Tenis",
+    "JOURNEY": "Jornada",
+    "JOURNEYS": "Jornadas",
+    "JOURNEY_NUMBER": "jornada número",
+    "DATE": "Fecha",
+    "NOT_ESTABLISHED": "No establecida",
+    "CALENDAR": "Calendario",
+    "CALENDAR_OF": "Calendario de la",
+    "CALENDAR_OF2": "Calendario del",
+    "INDIVIDUAL": "Individual",
+    "TEAM": "Equipo",
+    "TEAMS": "Equipos",
+    "PLAYER": "Jugador",
+    "PLAYERS": "Jugadores",
+    "WINNER": "Ganador",
+    "MODIFY": "Modificar",
+    "MOD_DATE": "Modificar jornadas",
+    "MOD_DATE2": "Modifique la fecha de la jornada",
+    "INTR_RESULT": "Resultados",
+    "INTR_JOURNEY": "Introduzca la fecha de cada jornada:",
+    "EXPL_INFO": "Añada información sobre las competiciones (por ejemplo, explicar en base a qué se decidirán los ganadores de cada jornada)",
+    "FINISHED": "Has terminado de crear la competición.",
+    "FINISHED2": "Terminado",
+    "INITIALIZATION": "Inicialización",
+    "MORE_INFO": "Añadir información",
+    "NEXT": "Siguiente",
+    "DONE": "Hecho.",
+    "MANUALLY": "Manualmente",
+    "RANDOM": "Aleatoriamente",
+    "RANDOM2": "Si desea introducir los resultados de la jornada número",
+    "RANDOM3": "de forma aleatoria pulse",
+    "BREAK": "Descanso",
+    "SELECTED": "Has seleccionado",
+    "QUESTION_RESULTS": "De qué forma desea introducir los resultados de la jornada",
+    "INTR_RESULT1": "Introducir resultados",
+    "INTR_RESULT2": "Introduzca los resultados de la jornada",
+    "INTR_RESULT3": "Marque el nombre del ganador/a o empate en la jornada número",
+    "INTR_RESULT3_TEAM": "Marque el nombre del equipo ganador o empate en la jornada número",
+    "INTR_RESULT4": "Ya has introducido todos los resultados de las jornadas.",
+    "INTR_RESULT5": "Los resultados de la jornada",
+    "NO_MODIFY": "No puedes modificar sus fechas",
+    "RESULTS_SUCCESS": "han sido registrados con éxito.",
+    "MOD_TEXT":"Texto informativo",
+    "MOD_TEXT2":"Modifique el texto",
+    "SHOW_INFO": "Mostrar información sobre esta competición",
+    "HIDE_INFO": "Ocultar la información",
+    "INFO_COMP": "Información referente a la competición",
+    "PLAY": "Jugar el duelo de la jornada",
+    "DELETE": "Eliminar competición",
+    "DELETE2": "Eliminar",
+    "CANCEL": "Cancelar",
+    "DELETE_QUESTION": "¿Está seguro de que desea eliminar esta competición?",
+    "RETURN": "Volver a la página de la competición",
+    "RETURN2": "Volver a la página de competiciones"
+  },
+  "COMPETITION_CREATION": {
+    "TITLE": "Creando competición de tipo",
+    "PARTICIPANT": "Seleccione a los participantes que formarán parte de la competición",
+    "MIN_2": "Debe seleccionar al menos 2",
+    "JOURNEY": "Jornada a modificar",
+    "DATE": "Nueva fecha",
+    "UPDATED_JOURNEY": "Jornada actualizada",
+    "UPDATED_INFORMATION": "Información actualizada",
+    "UPDATED_RESULTS": "Todos los resultados han sido registrados"
+  },
+  "TENNIS": {
+    "TITLE": "Torneo de Tenis",
+    "TOURNAMENT_TRACKING": "Seguimiento del torneo",
+    "PRINCIPAL_TOURNAMENT": "Introduce los resultados del torneo principal",
+    "SECONDARY_TOURNAMENT": "Introduce los resultados del torneo secundario",
+    "UPDATED_MATCH": "El enfrentamiento de la siguiente jornada se ha actualizado correctamente",
+    "UPDATED_MATCHES": "Los enfrentamientos de la siguiente jornada se han actualizado correctamente",
+    "INTR_RESULT3": "Marque el nombre del ganador/a en la jornada número",
+    "INTR_RESULT3_TEAM": "Marque el nombre del equipo ganador o empate en la jornada número",
+    "NOTE_PRIMARY": "- Nota: Hay enfrentamientos en este torneo principal con jugadores ficticios que no se muestran.",
+    "NOTE_SECONDARY": "- Nota: Hay enfrentamientos en este torneo secundario con jugadores ficticios que no se muestran.",
+    "GHOST1": "Es posible que en alguna jornada haya usuarios llamados 'Ghost', estos corresponden a los jugadores ficticios introducidos",
+    "GHOST2": "para un correcto funcionamiento del torneo. Los jugadores que se enfrenten a ellos ganarán la jornada automáticamente",
+    "MORE_JOURNEY1": "No se pueden conocer los enfrentamientos de las jornadas restantes debido a que dependen del resultado de su jornada anterior",
+    "MORE_JOURNEY2": "Aunque es posible consultar los torneos implicados (principal y secundario) y la fecha prevista en caso de estar establecida, para ello presione el botón de más",
+    "LESS_JOURNEY": "Para ocultar esta sección, presione el boton de menos"
+  },
+  "CLASSIFICATION": {
+    "TITLE": "Clasificación",
+    "LEAGUE": "Clasificación de la liga:",
+    "STUDENT": "Nombre del estudiante",
+    "TEAM": "Nombre del equipo",
+    "PLAYED": "Jugados",
+    "WON": "Ganados",
+    "DRAW": "Empatados",
+    "DRAW2": "Empate",
+    "LOST": "Perdidos",
+    "POINTS": "Puntuación",
+    "N": "No.",
+    "INFORMATION": "*Los participantes con un número menos de enfrentamientos realizados se debe a la irregularidad de ser un número impar de participantes totales en esta liga. Los descansos que deben realizarse en cada jornada por parte de algún participante conlleva a no sumar puntos en esa jornada."
+  },
+  "TOURNAMENTS": {
+    "PARTICIPANTS": "Participantes del torneo actuales",
+    "PRINCIPAL": "Torneo principal",
+    "SECONDARY": "Torneo secundario",
+    "PARTICIPATES": "Participa",
+    "DONT_PARTICIPATES": "No participa",
+    "NOT_ESTABLISHED": "No establecida",
+    "NO_PLAYER_SECONDARY": "No hay jugadores en el torneo secundario",
+    "FINAL": "Final",
+    "FINALISTS": "Finalistas",
+    "ELIMINATED": "Eliminados",
+    "PLAYERS_ELIMINATED": "Participantes eliminados",
+    "NO_PLAYER_ELIMINATED": "No hay jugadores eliminados",
+    "FINISHED": "Este torneo ha finalizado"
+  },
+  "TEAMS": {
+    "TITLE": "Creación de equipos",
+    "INTRO": "Introduzca los nombres de los equipos que desee crear:",
+    "TEAM": "Equipo",
+    "GROUP": "Seleccione el grupo del cual desea crear los equipos",
+    "STUDENT": "Seleccione a qué equipo pertenece cada alumno",
+    "TEACHER": "Contenido exclusivo para los profesores",
+    "MORE": "Añadir otro equipo",
+    "DELETE": "Eliminar equipo",
+    "FINISHED": "Los equipos han sido creados correctamente",
+    "RETURN": "Volver a la página de la competición"
   }
 
 }
