--- a/src/assets/i18n/ca.json
+++ b/src/assets/i18n/ca.json
@@ -345,8 +345,8 @@
     "RETURN2": "Volver a la página de competiciones",
     "POINTS_FIRST": "Puntos primer clasificado",
     "POINTS_SECOND": "Puntos segundo clasificado",
-    "BADGES_FIRST": "Insignia primer clasificado",
-    "BADGES_SECOND": "Insignia segundo clasificado"
+    "BADGES_FIRST": "Valor insignia primer clasificado",
+    "BADGES_SECOND": "Valor insignia segundo clasificado"
   },
   "COMPETITION_CREATION": {
     "TITLE": "Creando competición de tipo",
