--- a/src/assets/i18n/ca.json
+++ b/src/assets/i18n/ca.json
@@ -46,7 +46,8 @@
     "EMAIL": "Email",
     "TITLE": "Estudiants",
     "CHOOSE": "Tria l'estudiant",
-    "SHOW": "Mostrar estudiants"
+    "SHOW": "Mostrar estudiants",
+    "TEAMSHOW": "Mostrar equips"
   },
   "QUESTIONNAIRES": {
     "TITLE": "Qüestionaris",
