--- a/src/assets/i18n/ca.json
+++ b/src/assets/i18n/ca.json
@@ -36,7 +36,6 @@
   },
   "TEACHER": {
     "ID": "Id. Professor"
-
   },
   "STUDIENTS": {
     "ID": "Id. Estudiant",
@@ -112,7 +111,6 @@
     "TEXTBADGES": "Insígnia guanyada  segons la nota del qüestionari",
     "TEXTCARDS1": "guanyades  segons la nota del qüestionari",
     "NOASSIGNEDCOLLECTION": "S'ha d'escollir una col·lecció"
-
   },
   "ERROR": {
     "EMPTYFIELDS": "Cal omplir tots els camps correctament",
@@ -128,8 +126,6 @@
     "CREATEBADGE": "Crear insígnia",
     "POINTID": "Id. Punt",
     "BADGEID": "Id. Insígnia"
-
-
   },
   "POINTS": {
     "TITLE": "Punts",
@@ -235,7 +231,6 @@
     "IMAGENEW": "Imatge del nou cromo",
     "CREATE": "Crear nou cromo",
     "SAVE": "Guardar nou cromo",
-
     "DELETE": "Eliminar cromo de la col·lecció",
     "OFCOLLECTION": "Cromos de la col·lecció",
     "CHOOSE": "Tria el cromo",
@@ -260,8 +255,6 @@
     "RATIO3": "Baix",
     "RATIO4": "Rar",
     "UNKNOWN": "Desconegut"
-
-
   },
   "COMMON": {
     "TYPEASSIGNMENTCHOOSE": "Tria el tipus d'assignació",
@@ -277,7 +270,6 @@
     "TEAMS": "Equipos",
     "INDIVIDUAL": "Individual",
     "ASSIGN": "Actualitzar grup i opció"
-
   },
   "COMPETITIONS": {
     "TITLE": "Competiciones",
@@ -359,7 +351,12 @@
     "DATE": "Nueva fecha",
     "UPDATED_JOURNEY": "Jornada actualizada",
     "UPDATED_INFORMATION": "Información actualizada",
-    "UPDATED_RESULTS": "Todos los resultados han sido registrados"
+    "UPDATED_RESULTS": "Todos los resultados han sido registrados",
+    "DONE": "Finalitzar",
+    "AUTOMATION_TITLE": "Premis Automatitzables",
+    "AUTOMATION1": "Assignar 1 punt de competició al primer i segon classificats (al finalitzar cada jornada)",
+    "AUTOMATION2": "Assignar 1 cromo aleatori al primer i segon classificats (al finalitzar cada jornada)",
+    "CHOOSE": "Tria els premis"
   },
   "TENNIS": {
     "TITLE": "Torneo de Tenis",
@@ -381,6 +378,7 @@
   "CLASSIFICATION": {
     "TITLE": "Clasificación",
     "LEAGUE": "Clasificación de la liga:",
+    "AUTOMATIONS": "Ver premios automáticos",
     "STUDENT": "Nombre del estudiante",
     "TEAM": "Nombre del equipo",
     "PLAYED": "Jugados",
@@ -435,5 +433,11 @@
     "GROUPS": "Escull un grup",
     "GROUP": "Id del grup",
     "AWARDS": "Passar llista i assignar premis per puntualitat"
+  },
+
+  "AUTOMATION": {
+    "TITLE": "Premis Automàtics",
+    "INFORMATION": "S'han assignat els premis automàtics",
+    "NOCOL": "No hi ha cap col·lecció de cromos assignada a aquest grup"
   }
 }
