--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -264,6 +264,8 @@
     "MAX3NUMBER": "Max. 3 numbers",
     "PASTEIMAGE": "Copy link  .jpg",
     "CANCEL": "Cancel",
-    "INNUMBER": "Enter a number"
+    "INNUMBER": "Enter a number",
+    "SCHOOL": "School",
+    "SCHOOLS": "Schools"
   }
 }
