improvements to home student page, add hall of fame

--- a/src/assets/i18n/ca.json
+++ b/src/assets/i18n/ca.json
@@ -15,7 +15,9 @@
     "LANGUAGE": "Idioma",
     "RANKING": "Ranking d'estudiants",
     "NEXTLEVELPOINTS": "Punts per a el seguent nivell: ",
-    "LEVEL": "Nivell"
+    "LEVEL": "Nivell",
+    "MYPOS": "La meva posició",
+    "RANK": "Rang"
   },
   "LOGIN": {
     "USERNAME": "Nom d'usuari",
@@ -316,6 +318,7 @@
     "DELETE": "Eliminar",
     "SAVE": "Guardar",
     "SELECTAVATAR": "Sel·lecciona un avatar",
-    "GOBACK": "Tornar"
+    "GOBACK": "Tornar",
+    "ME": "Jo"
   }
 }
